--- a/components/Cards/examples/resources/CardExampleViewController.xib
+++ b/components/Cards/examples/resources/CardExampleViewController.xib
@@ -24,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BAQ-GJ-1pn" customClass="MDCCard">
-                    <rect key="frame" x="30" y="94" width="315" height="543"/>
+                    <rect key="frame" x="30" y="94" width="315" height="479"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-image" translatesAutoresizingMaskIntoConstraints="NO" id="ldt-3r-Agk">
                             <rect key="frame" x="0.0" y="0.0" width="315" height="315"/>
@@ -33,13 +33,13 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mpO-dS-0yd">
-                            <rect key="frame" x="8" y="325" width="299" height="21"/>
+                            <rect key="frame" x="8" y="325" width="299" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tmz-Bt-Hco">
-                            <rect key="frame" x="8" y="354" width="299" height="181"/>
-                            <string key="text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+                            <rect key="frame" x="8" y="353.5" width="299" height="117.5"/>
+                            <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -47,10 +47,14 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="ldt-3r-Agk" firstAttribute="trailing" secondItem="mpO-dS-0yd" secondAttribute="leading" constant="-8" id="0CE-xb-4pW"/>
+                        <constraint firstAttribute="bottom" secondItem="ldt-3r-Agk" secondAttribute="bottom" id="6nf-mh-lPb"/>
+                        <constraint firstItem="mpO-dS-0yd" firstAttribute="top" secondItem="BAQ-GJ-1pn" secondAttribute="top" constant="8" id="DhK-tR-doL"/>
                         <constraint firstAttribute="trailing" secondItem="mpO-dS-0yd" secondAttribute="trailing" constant="8" id="MFB-Nj-dQU"/>
                         <constraint firstItem="mpO-dS-0yd" firstAttribute="leading" secondItem="BAQ-GJ-1pn" secondAttribute="leading" constant="8" id="WJn-vb-ReP"/>
                         <constraint firstItem="mpO-dS-0yd" firstAttribute="top" secondItem="ldt-3r-Agk" secondAttribute="bottom" constant="10" id="Y9S-sz-I8f"/>
                         <constraint firstItem="Tmz-Bt-Hco" firstAttribute="top" secondItem="mpO-dS-0yd" secondAttribute="bottom" constant="8" id="bRb-kf-lM3"/>
+                        <constraint firstItem="ldt-3r-Agk" firstAttribute="trailing" secondItem="Tmz-Bt-Hco" secondAttribute="leading" constant="-8" id="bjC-5v-fyc"/>
                         <constraint firstAttribute="trailing" secondItem="ldt-3r-Agk" secondAttribute="trailing" id="bzX-OZ-rhy"/>
                         <constraint firstAttribute="bottom" secondItem="Tmz-Bt-Hco" secondAttribute="bottom" constant="8" id="eVu-tC-C5A"/>
                         <constraint firstItem="ldt-3r-Agk" firstAttribute="top" secondItem="BAQ-GJ-1pn" secondAttribute="top" id="gOK-UO-3cP"/>
@@ -58,14 +62,60 @@
                         <constraint firstItem="ldt-3r-Agk" firstAttribute="leading" secondItem="BAQ-GJ-1pn" secondAttribute="leading" id="laW-HO-JiJ"/>
                         <constraint firstAttribute="trailing" secondItem="Tmz-Bt-Hco" secondAttribute="trailing" constant="8" id="qQK-f0-FLE"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="0CE-xb-4pW"/>
+                            <exclude reference="6nf-mh-lPb"/>
+                            <exclude reference="bjC-5v-fyc"/>
+                            <exclude reference="bzX-OZ-rhy"/>
+                            <exclude reference="DhK-tR-doL"/>
+                            <exclude reference="WJn-vb-ReP"/>
+                            <exclude reference="Y9S-sz-I8f"/>
+                            <exclude reference="hBu-ah-26L"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=compact">
+                        <mask key="constraints">
+                            <include reference="0CE-xb-4pW"/>
+                            <include reference="6nf-mh-lPb"/>
+                            <include reference="bjC-5v-fyc"/>
+                            <include reference="DhK-tR-doL"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=regular">
+                        <mask key="constraints">
+                            <exclude reference="bzX-OZ-rhy"/>
+                            <exclude reference="WJn-vb-ReP"/>
+                            <exclude reference="Y9S-sz-I8f"/>
+                            <exclude reference="hBu-ah-26L"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=regular-widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="bzX-OZ-rhy"/>
+                            <include reference="WJn-vb-ReP"/>
+                            <include reference="Y9S-sz-I8f"/>
+                            <include reference="hBu-ah-26L"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=regular-widthClass=regular">
+                        <mask key="constraints">
+                            <include reference="0CE-xb-4pW"/>
+                            <include reference="6nf-mh-lPb"/>
+                            <include reference="bjC-5v-fyc"/>
+                            <include reference="DhK-tR-doL"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="BAQ-GJ-1pn" secondAttribute="trailing" constant="30" id="bdn-MZ-eeg"/>
-                <constraint firstItem="BAQ-GJ-1pn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="qTV-9a-RUO"/>
-                <constraint firstAttribute="bottom" secondItem="BAQ-GJ-1pn" secondAttribute="bottom" constant="30" id="rBD-rT-QRT"/>
-                <constraint firstItem="BAQ-GJ-1pn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" constant="30" id="tgZ-0g-Sb2"/>
+                <constraint firstItem="BAQ-GJ-1pn" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="57T-Xi-SQb"/>
+                <constraint firstItem="BAQ-GJ-1pn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Yc8-Tp-Oxg"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BAQ-GJ-1pn" secondAttribute="trailing" constant="30" id="bdn-MZ-eeg"/>
+                <constraint firstItem="BAQ-GJ-1pn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="qTV-9a-RUO"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="BAQ-GJ-1pn" secondAttribute="bottom" constant="30" id="rBD-rT-QRT"/>
+                <constraint firstItem="BAQ-GJ-1pn" firstAttribute="top" relation="greaterThanOrEqual" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" constant="30" id="tgZ-0g-Sb2"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
         </view>
