--- a/components/Cards/examples/resources/CardExampleViewController.xib
+++ b/components/Cards/examples/resources/CardExampleViewController.xib
@@ -38,25 +38,31 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tmz-Bt-Hco">
-                            <rect key="frame" x="8" y="353.5" width="299" height="117.5"/>
+                            <rect key="frame" x="8" y="353.5" width="299" height="79.5"/>
                             <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NWQ-Eq-COf" customClass="MDCFlatButton">
+                            <rect key="frame" x="110.5" y="441" width="94" height="30"/>
+                            <state key="normal" title="Action Button"/>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="ldt-3r-Agk" firstAttribute="trailing" secondItem="mpO-dS-0yd" secondAttribute="leading" constant="-8" id="0CE-xb-4pW"/>
+                        <constraint firstAttribute="bottom" secondItem="NWQ-Eq-COf" secondAttribute="bottom" constant="8" id="3Iu-7x-lp7"/>
                         <constraint firstAttribute="bottom" secondItem="ldt-3r-Agk" secondAttribute="bottom" id="6nf-mh-lPb"/>
                         <constraint firstItem="mpO-dS-0yd" firstAttribute="top" secondItem="BAQ-GJ-1pn" secondAttribute="top" constant="8" id="DhK-tR-doL"/>
                         <constraint firstAttribute="trailing" secondItem="mpO-dS-0yd" secondAttribute="trailing" constant="8" id="MFB-Nj-dQU"/>
                         <constraint firstItem="mpO-dS-0yd" firstAttribute="leading" secondItem="BAQ-GJ-1pn" secondAttribute="leading" constant="8" id="WJn-vb-ReP"/>
                         <constraint firstItem="mpO-dS-0yd" firstAttribute="top" secondItem="ldt-3r-Agk" secondAttribute="bottom" constant="10" id="Y9S-sz-I8f"/>
+                        <constraint firstItem="NWQ-Eq-COf" firstAttribute="centerX" secondItem="BAQ-GJ-1pn" secondAttribute="centerX" id="YBt-vK-89V"/>
                         <constraint firstItem="Tmz-Bt-Hco" firstAttribute="top" secondItem="mpO-dS-0yd" secondAttribute="bottom" constant="8" id="bRb-kf-lM3"/>
                         <constraint firstItem="ldt-3r-Agk" firstAttribute="trailing" secondItem="Tmz-Bt-Hco" secondAttribute="leading" constant="-8" id="bjC-5v-fyc"/>
                         <constraint firstAttribute="trailing" secondItem="ldt-3r-Agk" secondAttribute="trailing" id="bzX-OZ-rhy"/>
-                        <constraint firstAttribute="bottom" secondItem="Tmz-Bt-Hco" secondAttribute="bottom" constant="8" id="eVu-tC-C5A"/>
+                        <constraint firstItem="NWQ-Eq-COf" firstAttribute="top" secondItem="Tmz-Bt-Hco" secondAttribute="bottom" constant="8" id="g25-kf-cSZ"/>
                         <constraint firstItem="ldt-3r-Agk" firstAttribute="top" secondItem="BAQ-GJ-1pn" secondAttribute="top" id="gOK-UO-3cP"/>
                         <constraint firstItem="Tmz-Bt-Hco" firstAttribute="leading" secondItem="BAQ-GJ-1pn" secondAttribute="leading" constant="8" id="hBu-ah-26L"/>
                         <constraint firstItem="ldt-3r-Agk" firstAttribute="leading" secondItem="BAQ-GJ-1pn" secondAttribute="leading" id="laW-HO-JiJ"/>
@@ -118,6 +124,7 @@
                 <constraint firstItem="BAQ-GJ-1pn" firstAttribute="top" relation="greaterThanOrEqual" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" constant="30" id="tgZ-0g-Sb2"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+            <point key="canvasLocation" x="34.5" y="54.5"/>
         </view>
     </objects>
     <resources>
